<resources>
    <string name="app_name">GlowRoad</string>
    <string name="glowroad">GlowRoad</string>
    <string name="tag_line">The network to grow your business</string>
    <string name="sign_in">Sign-In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="no_account">No Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="learn_more">Learn More</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="follow">Follow</string>
    <string name="facebook_app_id">1480645565367436</string>
    <string name="fb_login_protocol_scheme">fb1480645565367436</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="gr">GR</string>
    <string name="seller_check">Are you a seller?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_hint"><![CDATA[Create a post, business requirement & more]]></string>
    <string name="products_to_sell">PRODUCTS TO SELL</string>
    <string name="my_products">MY PRODUCTS</string>
    <string name="browse_shops">BROWSE SHOPS</string>
    <string name="find_buyers">FIND BUYERS</string>
    <string name="premium_post">PREMIUM POST</string>
    <string name="all_premium_posts">ALL PREMIUM POSTS</string>
    <string name="plus_follow">+ Follow</string>
    <string name="shop_name">Shop Name</string>
    <string name="location">Location</string>
    <string name="shop_tag_line">Shop Tag Line</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="_12">+12</string>
    <string name="more_products_by_shop_name">MORE PRODUCTS BY SHOP NAME</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="comment">Comment</string>
    <string name="_312_visit_shop">+312\nVisit Shop</string>
    <string name="view_number">View Number</string>
    <string name="connect">+Connect</string>
    <string name="_2d">2D</string>
    <string name="ramya_coimbatore_hi_pls_send_updates_to_my_number_8099999998_i_am_interested">Ramya, Coimbatore Hi pls send updates to my number 8099999998. I am interested</string>
</resources>
