<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#DD000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kalapuneet.glowroad.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.AppCompatTextView
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/glowroad" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_line" />
    
    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@drawable/rounded_white"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="12dp"
            app:hintTextAppearance="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:textSize="14sp"
                android:textColorHint="#727272"
                android:hint="@string/email"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="12dp"
            app:hintTextAppearance="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:textSize="14sp"
                android:textColorHint="#727272"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatTextView
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:id="@+id/forgot_password"
            android:layout_gravity="end"
            android:textColor="@color/colorPrimary"
            android:text="@string/forgot_password"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:padding="8dp"
            android:onClick="normalLogin"
            android:id="@+id/login"
            android:textColor="#FFFFFF"
            android:background="#32CC32"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:text="@string/login"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp" />
            <android.support.v7.widget.AppCompatTextView
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:padding="8dp"
                android:onClick="facebookLogin"
                android:id="@+id/facebook_login"
                android:textColor="#FFFFFF"
                android:background="#3B5998"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@string/login_with_facebook"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:textSize="14sp"
                android:textColor="#727272"
                android:text="@string/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:id="@+id/sign_up"
                android:textColor="@color/colorPrimary"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:textColor="#727272"
                android:text="@string/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:id="@+id/learn_more"
                android:textColor="@color/colorPrimary"
                android:text="@string/learn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <LinearLayout
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/about"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/contact"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/follow"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow" />
    </LinearLayout>
</LinearLayout>
