<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.AppCompatImageView
        android:src="@drawable/ic_boss"
        android:layout_marginStart="8dp"
        android:layout_gravity="center_vertical"
        android:id="@+id/user_image"
        android:background="#727272"
        android:layout_width="40dp"
        android:layout_height="40dp" />
    <LinearLayout
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:textColor="#212121"
            android:text="@string/ramya_coimbatore_hi_pls_send_updates_to_my_number_8099999998_i_am_interested"
            android:id="@+id/name_location_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/whatsapp"
                android:layout_marginTop="4dp"
                android:drawablePadding="4dp"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_whatsapp"
                android:text="@string/view_number"
                android:textColor="#727272"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/connect"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:text="@string/connect"
                android:textColor="#727272"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:gravity="end"
                android:text="@string/_2d"
                android:textColor="#727272"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="#EEEEEE"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>
</LinearLayout>