<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/premium_post"
                android:textSize="12sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/all_premium_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/all_premium_posts"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:src="@drawable/ic_grocery"
                android:id="@+id/shop_image"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/shop_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_name"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/shop_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="#727272"
                    android:textSize="14sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/shop_tag_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_tag_line"
                    android:textColor="#212121"
                    android:textSize="12sp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/rounded_outline_gray"
                android:padding="4dp"
                android:text="@string/plus_follow"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="#EEEEEE" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/lorem_ipsum"
            android:textColor="#212121"
            android:textSize="14sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/product_image_1"
                android:layout_margin="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_grocery_shop"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/product_image_2"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/other_grocery"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <RelativeLayout
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/product_image_3"
                        android:scaleType="centerCrop"
                        android:src="@drawable/grocery_shopping"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/remaining_image_count"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:text="@string/_12"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/more_products_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/more_products_by_shop_name"
            android:textColor="#212121"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/other_product_1"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/random_grocery"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/other_product_2"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_basket_shop"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/other_product_3"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/random_grocery"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/other_product_4"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_basket_shop"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/other_product_5"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/random_grocery"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <RelativeLayout
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <android.support.v7.widget.AppCompatImageView
                        android:scaleType="centerCrop"
                        android:src="@drawable/random_grocery"
                        android:id="@+id/other_product_6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <android.support.v7.widget.AppCompatTextView
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textColor="#FFFFFF"
                        android:text="@string/_312_visit_shop"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_like"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="32"
                android:textColor="#D75A4A" />
            <android.support.v7.widget.AppCompatImageView
                android:gravity="center"
                android:id="@+id/comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_comment_gray_24dp" />
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_reply_gray_24dp" />
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_vert_gray_24dp"
                android:layout_gravity="end"
                android:gravity="center_vertical" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="#EEEEEE" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/comment_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="#EEEEEE" />
        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/profile_picture"
                android:background="#727272"
                android:layout_width="24dp"
                android:layout_height="24dp" />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/comment_et"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                android:hint="@string/write_a_comment"
                android:background="@android:drawable/editbox_background_normal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/comment_btn"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="14sp"
                android:textColor="#FFFFFF"
                android:background="#3333BB"
                android:text="@string/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:background="#EEEEEE"
        android:layout_width="match_parent"
        android:layout_height="8dp" />
</LinearLayout>